# leastsquares

./: .gitignore  LICENSE  leastsquares.cabal  presentation.tex  report.bib  report.tex
app/: Main.hs  example1.hs  example2.hs  example3.hs  example_least_norm.hs
figures/: boat_blurred.eps  boat_deblurred.eps  straight_line_fit.eps
src/: LeastSquares.hs
