name:                leastsquares
version:             0.1.0.0
synopsis:            Least squares modelling in Haskell
description:         Please see README.md
homepage:            http://github.com/tridao/leastsquares#readme
license:             BSD3
license-file:        LICENSE
author:              Tri Dao
maintainer:          trid@stanford.edu
copyright:           Tri Dao
category:            web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LeastSquares
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hmatrix
  default-language:    Haskell2010
  ghc-options:         -Wall

executable leastsquares-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , leastsquares
                     , hmatrix
  default-language:    Haskell2010

test-suite leastsquares-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , leastsquares
                     , hmatrix
                     , hspec
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tridao/leastsquares
